--- a/06.html
+++ b/06.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>模板字符串</title>
 </head>
 <body>
 <script>
@@ -16,6 +16,13 @@
     let age = 20
     let str2 = `hello,${name},age is ${age+1}`
     console.log(str2)
+
+    // 3在`符号中调用方法
+    function f1() {
+        return "hello f1"
+    }
+    let str3 = `demo,${f1()}`
+    console.log(str3)
 </script>
 </body>
 </html>
